--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: nginx
+automountServiceAccountToken: false
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,6 +20,8 @@ spec:
       labels:
         app: nginx
     spec:
+      serviceAccountName: nginx
+      automountServiceAccountToken: false
       containers:
         - name: nginx
           image: nginx:1.14.2
