Add resource limits

--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -27,3 +27,7 @@ spec:
           image: nginx:1.14.2
           ports:
             - containerPort: 80
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512m
