--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -28,6 +28,9 @@ spec:
           ports:
             - containerPort: 80
           resources:
+            requests:
+              cpu: 250m
+              memory: 256m
             limits:
               cpu: 500m
               memory: 512m
